# market-analysis

./: .dockerignore  .env.example  .gitignore  AIRFLOW_INTEGRATION.md  Dockerfile  README.md  conftest.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tree_output.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/scripts/: package-lock.json  package.json
.github/scripts/sync/: index.js
.github/workflows/: ci.yml  project-v2-trigger.yml  sync-local-to-project.yml  sync-project-to-local.yml  test-project-v2-events.yml  validate-workflows.sh
.project/: README.md
.project/scripts/: github_setup.ps1
.project/status/: DEVELOPMENT_STATUS.yaml
dags/: analytics__ingest__binance.py  market_analysis__ingest__multi.py  trading__ingest__ibkr.py
docker/: Dockerfile.airflow
docs/: api_reference.md  state_aware_trading.md
docs/debugging/: test_failure_analysis.md
docs/dev/: 2025-04-22_SESSION_CHECKPOINT.md  api_integration_plan.md
docs/dev/TO-DO/: (2025-04-22) TO-DO.md  (2025-04-23) DAG_RESTRUCTURE_PLAN.md  (2025-04-23) MANUAL_TEST_INSTRUCTIONS.md
docs/dev/research/: (2025-04-20) AIRFLOW_INTEGRATION.md  (2025-04-22) DAG_RENAMING_RESEARCH.md
examples/: run_analysis.py
requirements/: requirements-airflow.txt  requirements-core.txt  requirements-ibrokers.txt
scripts/: README.md  Show-SelectedTree.ps1  cleanup.py
src/: __init__.py  main.py  market_analysis.py  run_api.py
src/api/: __init__.py  app.py  models.py
src/api/core/: app.py  (+2 more)
src/config/: rate_limits.py  technical_indicators.py
src/data_providers/: __init__.py  base_provider.py  binance_provider.py  interactive_brokers_provider.py  yfinance_provider.py
temp_airflow_home/: airflow.cfg
tests/: __init__.py  airflow_dag_import_fix.md  airflow_stubs.py  conftest.py  test_airflow_integration_doc.py  test_dag_import.py  test_dockerfile.py  test_env_vars.py  test_imports.py  test_market_analysis.py  test_middleware.py  test_rate_limiter_detailed.py  test_websocket.py
tests/api/: conftest.py  test_endpoints.py  test_models.py  test_performance.py
tests/core/: __init__.py  test_app.py  test_config.py
tests/infrastructure/: index.js  logger.js  logger.test.js  package-lock.json  package.json
tests/models/: test_analysis.py  test_market_data.py
tests/utils/: __init__.py  test_data.py
(+20 files in other folders)
