[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-analysis"
version = "0.1.0"
description = "Market analysis tools and utilities"
requires-python = ">=3.10"
dependencies = [
    # Core API Dependencies
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.0.0",
    "slowapi>=0.1.0",
    "yfinance>=0.2.32",
    "ratelimit>=2.2.1",
    
    # Data Processing and Analysis
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.0",
    "ta>=0.10.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    
    # Queue Management
    "redis>=5.0.1",
    "aio_pika>=9.3.1",
    "websockets>=12.0",
    "prometheus-fastapi-instrumentator>=0.22.0",
]

[project.optional-dependencies]
ibrokers = [
    "ib-insync>=0.9.86"
]
binance = [
    "python-binance>=1.0.19"
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1"
]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1"
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "performance: marks tests as performance tests",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools]
packages = ["market_analysis"]
package-dir = {"" = "src"}
