[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-analysis"
version = "0.1.0"
description = "Market analysis tools and utilities"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.0.0",
    "slowapi>=0.1.0",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "yfinance>=0.2.32",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.0",
    "ta>=0.10.0",
    "matplotlib>=3.7.0",
    "ratelimit>=2.2.1",
    "redis>=5.0.1",
    "aio_pika>=9.3.1",
    "websockets>=12.0",
    "prometheus-fastapi-instrumentator>=0.22.0",
]

[tool.setuptools]
packages = ["market_analysis"]
package-dir = {"" = "src"}
